# action-yaml-update

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  action.yml  catalog-info.yaml  eslint.config.js  go.mod  jest.config.js  package-lock.json  package.json  pyproject.toml  readme.md  release-please-config.json
.github/: pull_request_template.md
.github/workflows/: docker-tag.yaml  release.yml  test.yml
cmd/yaml-update/: main.go
internal/github/: github.go  github_test.go
internal/gitops/: gitops.go  gitops_test.go
internal/inputs/: inputs.go  inputs_test.go
internal/outputs/: outputs.go
internal/updater/: updater.go  updater_test.go
src/: git-ops.js  github-api.js  index.js  inputs.js  outputs.js  updater.js
src/yaml_update/: __main__.py  git_ops.py  github_api.py  inputs.py  outputs.py  updater.py
tests/: conftest.py  inputs.test.js  test_git_ops.py  test_github_api.py  test_inputs.py  test_main.py  test_outputs.py  test_updater.py  updater.test.js
tests/fixtures/: comments_preserved.yaml  helm_values.yaml  kustomization.yaml  multi_image.yaml
